hold vs press diffrentiation