@@ -3,4 +3,4 @@
 
 set "DIR=%cd%"
 set "DIR=%DIR:\=/%"
-runjava.bat -e "-Djava.library.path=%DIR%/natives/win/build"
+runjava.bat -e "-Djava.library.path=%DIR%/natives/win/build --enable-native-access=ALL-UNNAMED" 
